--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,14 @@ rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
 serde = { version = "1.0", features = ["derive"] }
 dotenv = "0.15"
 tokio = { version = "1.0", features = ["full"] }
-sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
-rocket_db_pools = { version = "0.2.0", features = ["sqlx_postgres"] }
 
-# Configuração padrão do banco (será sobrescrita por DATABASE_URL se definida)
-[default.databases.postgres]
-url = "${DATABASE_URL}"
+# Diesel ORM
+diesel = { version = "2.1.0", features = ["postgres", "chrono", "serde_json", "r2d2", "uuid"] }
+diesel_migrations = "2.1.0"
+r2d2 = "0.8"
+
+# Outras dependências úteis
+chrono = { version = "0.4", features = ["serde"] }
+uuid = { version = "1.0", features = ["v4", "serde"] }
+bcrypt = "0.15"
+jsonwebtoken = "9.0"
