--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,4 @@ chrono = { version = "0.4", features = ["serde"] }
 uuid = { version = "1.0", features = ["v4", "serde"] }
 bcrypt = "0.15"
 jsonwebtoken = "9.0"
+async-trait = "0.1.88"
