build: add mockall dependency for testing
Add mockall crate and its dependencies to enable mocking in tests

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,4 @@ uuid = { version = "1.0", features = ["v4", "serde"] }
 bcrypt = "0.15"
 jsonwebtoken = "9.0"
 async-trait = "0.1.88"
+mockall = "0.13.1"
